# super_prompt

./: .gitignore  README.rst  pyproject.toml
super_prompt/: color.py  config.py  main.py  types.py
